@@ -4,7 +4,7 @@ package com.prodyna.mifune.core.schema;
  * #%L
  * prodyna-mifune-parent
  * %%
- * Copyright (C) 2021 - 2022 PRODYNA SE
+ * Copyright (C) 2021 - 2023 PRODYNA SE
  * %%
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -304,7 +304,7 @@ public class CypherUpdateBuilder {
         Optional.ofNullable(properties).stream()
             .flatMap(Collection::stream)
             .filter(Property::primary)
-            .collect(Collectors.toList());
+            .toList();
     if (primaryKeys.isEmpty()) {
       return "";
     }
